# BankRecSys

./: .gitignore  README.md  pyproject.toml
bankrecsys/conf/: config.yaml
bankrecsys/src/: model.py  preprocess.py  scripts.py  test.py
notebooks/: 0_Quick_Exploratory_Notebook.ipynb  1_Deep_Exploratory_Analysis.ipynb
src/: main.py  preprocess.py  submit.py  test.py
