[tool.poetry]
name = "BankRecSys"
version = "0.1.0"
description = "Bank Products Recommendation System"
authors = ["nachojeda"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
