[tool.poetry]
name = "BankRecSys"
version = "0.1.0"
description = "Bank Products Recommendation System"
authors = ["nachojeda"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
ipykernel = "^6.29.5"
lightfm = "^1.17"
cython = "^3.0.11"
numpy = "^2.0.1"
scipy = "^1.14.0"
recommenders = "^1.2.0"
lightgbm = "^4.5.0"
implicit = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
finrecsys = 'bankrecsys.src.scripts:main'